# Agentic-AI-Travel-Planning

./: architecture.mmd
.cursor/rules/: travel_stack.md
travel_agent_system/: .gitignore  README.md  family_trip_iternary.txt  pyproject.toml  solo_backpacking_trip_iternary.txt
travel_agent_system/src/travel_agent_system/: __init__.py  crew.py  main.py  run_crew.py
travel_agent_system/src/travel_agent_system/config/: agents.yaml  constants.py  tasks.yaml
travel_agent_system/src/travel_agent_system/tools/: amadeus_tools.py  custom_tool.py
